--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "undici": "latest",
     "fluent-ffmpeg": "^2.1.2",
     "stream": "^0.0.2",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
